<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vt4.VT4Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/greenBackground">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResultVT4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/greenCard"
            android:elevation="10dp"
            android:padding="4dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tvLesson1TittleVT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/less_1_fp2023"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLesson1VT4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/less_1_fp2023_hint"
                    android:imeOptions="actionDone">

                    <AutoCompleteTextView
                        android:id="@+id/acTvLesson1VT4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edLesson1VT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:hint="@string/result"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal" />

                    <TextView
                        android:id="@+id/tvResultLesson1Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/balls"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvResultLesson1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvLesson2TittleVT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/less_2_fp2023"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLesson2VT4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/less_2_hint"
                    android:imeOptions="actionDone">

                    <AutoCompleteTextView
                        android:id="@+id/acTvLesson2VT4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edLesson2VT"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:hint="@string/result"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal" />

                    <TextView
                        android:id="@+id/tvResultLesson2Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/balls"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvResultLesson2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvLesson3TittleVT4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/less_3_fp2023"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLesson3VT4"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/less_3_hint"
                    android:imeOptions="actionDone">

                    <AutoCompleteTextView
                        android:id="@+id/acTvLesson3VT4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="none" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearLesson3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edLesson3min"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="2"
                        android:hint="@string/min"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal" />

                    <EditText
                        android:id="@+id/edLesson3cek"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:ems="2"
                        android:hint="@string/cek"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal" />

                    <TextView
                        android:id="@+id/tvResultLesson3Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/balls"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvResultLesson3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvLesson4TittleVT4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/less_4_vt4"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/linearLesson4Result"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <EditText
                        android:id="@+id/edLesson4min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:ems="2"
                        android:hint="@string/min"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal" />

                    <EditText
                        android:id="@+id/edLesson4cek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:ems="2"
                        android:hint="@string/cek"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:inputType="number|numberDecimal" />

                    <CheckBox
                        android:id="@+id/cbGrenade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/check_grenade" />

                    <TextView
                        android:id="@+id/tvResultLesson4Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/balls"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvResultLesson4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResultGradeVT4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/greenCard"
            android:elevation="10dp"
            android:padding="4dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/tvResultsTiltleVT4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_grade"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnGradeVT4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/calculate_ball" />

                <LinearLayout
                    android:id="@+id/linearResult"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvresultValueVT4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tvResultDescribe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>